中文翻译：改了一下位置， 翻译了火车、显示屏幕相关
1670行左右需要校验

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -1625,20 +1625,20 @@
 
 	"create.display_link.set": "已选择目标位置",
 	"create.display_link.success": "成功绑定到目标位置",
-	"create.display_link.clear": "UNLOCALIZED: Cleared position selection",
-	"create.display_link.too_far": "UNLOCALIZED: Targeted position is too far from here",
-	"create.display_link.invalid": "UNLOCALIZED: Link has no valid target, try placing it again",
+	"create.display_link.clear": "清除绑定位置信息",
+	"create.display_link.too_far": "绑定的位置太远了~",
+	"create.display_link.invalid": "没有绑定到合理的对象，试试再放一遍",
 	"create.display_link.title": "UNLOCALIZED: Display Link",
-	"create.display_link.no_source": "UNLOCALIZED: Not a Display Source",
-	"create.display_link.no_target": "UNLOCALIZED: Not a Display Target",
+	"create.display_link.no_source": "不是一个可以当成显示器的方块",
+	"create.display_link.no_target": "不是一个可以用于信息来源的方块",
 	"create.display_link.reading_from": "UNLOCALIZED: Read from:",
-	"create.display_link.writing_to": "UNLOCALIZED: Send to:",
+	"create.display_link.writing_to": "发送至：",
 	"create.display_link.attached_side": "UNLOCALIZED: Block on attached side",
 	"create.display_link.targeted_location": "UNLOCALIZED: Block in targeted location",
 	"create.display_link.view_compatible": "UNLOCALIZED: Click to view all Compatible",
-	"create.display_link.information_type": "UNLOCALIZED: Type of Information",
+	"create.display_link.information_type": "数据类型",
 	"create.display_link.display_on": "写入数据到：",
-	"create.display_link.display_on_multiline": "UNLOCALIZED: Start writing at:",
+	"create.display_link.display_on_multiline": "在的位置开始显示",
 
 	"create.display_source.label": "UNLOCALIZED: Attached Label",
 	"create.display_source.combine_item_names": "UNLOCALIZED: Combine Item Names",
@@ -1651,67 +1651,67 @@
 	"create.display_source.fill_level.display": "显示格式",
 	"create.display_source.fill_level.percent": "百分比",
 	"create.display_source.fill_level.progress_bar": "进度条",
-	"create.display_source.value_list.display": "UNLOCALIZED: Value Display",
-	"create.display_source.value_list.shortened": "UNLOCALIZED: Shortened",
-	"create.display_source.value_list.full_number": "UNLOCALIZED: Full Number",
+	"create.display_source.value_list.display": "显示数值",
+	"create.display_source.value_list.shortened": "约数",
+	"create.display_source.value_list.full_number": "完全显示",
 	"create.display_source.value_list.thousand": "k",
 	"create.display_source.value_list.million": "m",
-	"create.display_source.player_deaths": "UNLOCALIZED: Player Deaths",
+	"create.display_source.player_deaths": "玩家死亡次数",
 	"create.display_source.scoreboard": "计分板",
 	"create.display_source.scoreboard.objective": "UNLOCALIZED: Objective ID",
 	"create.display_source.scoreboard.objective_not_found": "UNLOCALIZED: '%1$s' not found",
 	"create.display_source.scoreboard.objective.deaths": "UNLOCALIZED: Player Deaths",
 	"create.display_source.time_of_day": "时间",
-	"create.display_source.stop_watch": "UNLOCALIZED: Stopwatch",
+	"create.display_source.stop_watch": "停止检测",
 	"create.display_source.time.format": "时间格式",
 	"create.display_source.time.12_hour": "12小时制",
 	"create.display_source.time.24_hour": "24小时制",
 	"create.display_source.accumulate_items": "UNLOCALIZED: Accumulate Item Count",
 	"create.display_source.item_throughput": "UNLOCALIZED: Item Throughput",
-	"create.display_source.item_throughput.interval": "UNLOCALIZED: Interval",
-	"create.display_source.item_throughput.interval.second": "UNLOCALIZED: per Second",
-	"create.display_source.item_throughput.interval.minute": "UNLOCALIZED: per Minute",
-	"create.display_source.item_throughput.interval.hour": "UNLOCALIZED: per Hour",
-	"create.display_source.train_status": "UNLOCALIZED: Train Schedule Status",
-	"create.display_source.station_summary": "UNLOCALIZED: Train Station Summary",
-	"create.display_source.station_summary.filter": "UNLOCALIZED: Station name filter",
-	"create.display_source.station_summary.train_name_column": "UNLOCALIZED: Train column size",
-	"create.display_source.station_summary.platform_column": "UNLOCALIZED: Platform column size",
-	"create.display_source.station_summary.now": "UNLOCALIZED: now",
-	"create.display_source.station_summary.minutes": "UNLOCALIZED:  min",
-	"create.display_source.station_summary.seconds": "UNLOCALIZED: %1$ss",
-	"create.display_source.observed_train_name": "UNLOCALIZED: Detected Train Name",
-	"create.display_source.max_enchant_level": "UNLOCALIZED: Max Enchanting Cost",
-	"create.display_source.boiler_status": "UNLOCALIZED: Boiler Status",
-	"create.display_source.entity_name": "UNLOCALIZED: Entity Name",
-	"create.display_source.kinetic_speed": "UNLOCALIZED: Rotation Speed (RPM)",
-	"create.display_source.kinetic_speed.absolute": "UNLOCALIZED: Ignore Direction",
-	"create.display_source.kinetic_speed.directional": "UNLOCALIZED: Include Direction",
-	"create.display_source.kinetic_stress": "UNLOCALIZED: Network Stress",
-	"create.display_source.kinetic_stress.display": "UNLOCALIZED: Displayed Info",
-	"create.display_source.kinetic_stress.progress_bar": "UNLOCALIZED: Progress Bar",
-	"create.display_source.kinetic_stress.percent": "UNLOCALIZED: Percentage",
-	"create.display_source.kinetic_stress.current": "UNLOCALIZED: Stress in SU",
-	"create.display_source.kinetic_stress.max": "UNLOCALIZED: Total Capacity",
-	"create.display_source.kinetic_stress.remaining": "UNLOCALIZED: Remaining SU",
-	"create.display_source.redstone_power": "UNLOCALIZED: Redstone Power",
-	"create.display_source.redstone_power.display": "UNLOCALIZED: Display Format",
-	"create.display_source.redstone_power.number": "UNLOCALIZED: Number",
-	"create.display_source.redstone_power.progress_bar": "UNLOCALIZED: Progress Bar",
-	"create.display_source.boiler.not_enough_space": "UNLOCALIZED: Not enough space ",
-	"create.display_source.boiler.for_boiler_status": "UNLOCALIZED: for Boiler Status",
+	"create.display_source.item_throughput.interval": "UNLOCALIZED: Interval（每 ···· 重复？）",
+	"create.display_source.item_throughput.interval.second": "每秒",
+	"create.display_source.item_throughput.interval.minute": "每分",
+	"create.display_source.item_throughput.interval.hour": "每时",
+	"create.display_source.train_status": "火车时刻表状态",
+	"create.display_source.station_summary": "火车站列表",
+	"create.display_source.station_summary.filter": "车站名称过滤器",
+	"create.display_source.station_summary.train_name_column": "火车名列宽",
+	"create.display_source.station_summary.platform_column": "车站名列宽",
+	"create.display_source.station_summary.now": "现在",
+	"create.display_source.station_summary.minutes": " 分钟",
+	"create.display_source.station_summary.seconds": "%1$s秒",
+	"create.display_source.observed_train_name": "检测火车名称",
+	"create.display_source.max_enchant_level": "附魔消耗上限",
+	"create.display_source.boiler_status": "烧开水状态",
+	"create.display_source.entity_name": "实体名称",
+	"create.display_source.kinetic_speed": "转速（RPM）",
+	"create.display_source.kinetic_speed.absolute": "忽略方向",
+	"create.display_source.kinetic_speed.directional": "检测方向",
+	"create.display_source.kinetic_stress": "网络应力",
+	"create.display_source.kinetic_stress.display": "显示的信息",
+	"create.display_source.kinetic_stress.progress_bar": "进度条",
+	"create.display_source.kinetic_stress.percent": "进度",
+	"create.display_source.kinetic_stress.current": "UNLOCALIZED: Stress in SU 网络应力？",
+	"create.display_source.kinetic_stress.max": "总容量",
+	"create.display_source.kinetic_stress.remaining": "剩余 SU",
+	"create.display_source.redstone_power": "红石充能等级",
+	"create.display_source.redstone_power.display": "显示格式",
+	"create.display_source.redstone_power.number": "数字",
+	"create.display_source.redstone_power.progress_bar": "进度条",
+	"create.display_source.boiler.not_enough_space": "空间不足",
+	"create.display_source.boiler.for_boiler_status": "烧开水的地方",
 
-	"create.display_target.line": "UNLOCALIZED: Line %1$s",
-	"create.display_target.page": "UNLOCALIZED: Page %1$s",
-	"create.display_target.single_line": "UNLOCALIZED: Single Line",
+	"create.display_target.line": "第 %1$s 行",
+	"create.display_target.page": "第 %1$s 页",
+	"create.display_target.single_line": "单行",
 
-	"create.flap_display.cycles.alphabet": "UNLOCALIZED:  ;A;B;C;D;E;F;G;H;I;J;K;L;M;N;O;P;Q;R;S;T;U;V;X;Y;Z",
+	"create.flap_display.cycles.alphabet": ";A;B;C;D;E;F;G;H;I;J;K;L;M;N;O;P;Q;R;S;T;U;V;X;Y;Z",
 	"create.flap_display.cycles.numeric": "UNLOCALIZED:  ;0;1;2;3;4;5;6;7;8;9",
-	"create.flap_display.cycles.arrival_time": "UNLOCALIZED:    ; min;now;15s;30s;45s",
+	"create.flap_display.cycles.arrival_time": "; 分;现在;15s内;30s内;45s内",
 	"create.flap_display.cycles.shortened_numbers": "UNLOCALIZED:  ;K;M",
-	"create.flap_display.cycles.fluid_units": "UNLOCALIZED: mB;B ",
-	"create.flap_display.cycles.instant": "UNLOCALIZED:  ; ",
-	"create.flap_display.cycles.pixel": "UNLOCALIZED: █;▓;▒",
+	"create.flap_display.cycles.fluid_units": "mB;B ",
+	"create.flap_display.cycles.instant": " ; ",
+	"create.flap_display.cycles.pixel": "█;▓;▒",
 
 	"create.super_glue.too_far": "选择范围过大",
 	"create.super_glue.cannot_reach": "选择的方块必须是相连的",
