中文翻译：显示链接器的界面和提示文本、标语牌？的用途介绍
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -684,7 +684,7 @@
 	"advancement.create.compacting.desc": "使用动力辊压机与工作盆将多个物品压缩成一个",
 	"advancement.create.belt": "海带传动",
 	"advancement.create.belt.desc": "用传送带连接两个传动杆",
-	"advancement.create.funnel": "UNLOCALIZED: Airport Aesthetic（机场美学？）",
+	"advancement.create.funnel": "机场美学",
 	"advancement.create.funnel.desc": "用漏斗从容器输出或输入物品",
 	"advancement.create.chute": "轰然倒塌",
 	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
@@ -816,7 +816,7 @@
 	"advancement.create.fist_bump.desc": "使两个机械手互相碰拳",
 	"advancement.create.crafter_lazy_000": "权宜之计",
 	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)（大幅度减慢动力合成器来延迟基本建设？）",
-	"advancement.create.extendo_grip_dual": "UNLOCALIZED: To full Extent",
+	"advancement.create.extendo_grip_dual": "点满升级",
 	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n（隐藏进度）",
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
 	"advancement.create.musical_arm.desc": "使用动力臂播放唱片",
@@ -851,7 +851,7 @@
 	"advancement.create.red_signal": "老司机",
 	"advancement.create.red_signal.desc": "驾驶火车闯红灯§7\n（隐藏进度）",
 	"advancement.create.train_crash": "劣质服务",
-	"advancement.create.train_crash.desc": "目睹自己乘坐的火车遭到撞击§7\n（隐藏进度）",
+	"advancement.create.train_crash.desc": "目睹自己乘坐的列车相撞§7\n（隐藏进度）",
 	"advancement.create.train_crash_backwards": "盲区",
 	"advancement.create.train_crash_backwards.desc": "在倒车时与另一辆列车相撞",
 
@@ -1625,93 +1625,93 @@
 
 	"create.display_link.set": "已选择目标位置",
 	"create.display_link.success": "成功绑定到目标位置",
-	"create.display_link.clear": "UNLOCALIZED: Cleared position selection",
-	"create.display_link.too_far": "UNLOCALIZED: Targeted position is too far from here",
-	"create.display_link.invalid": "UNLOCALIZED: Link has no valid target, try placing it again",
-	"create.display_link.title": "UNLOCALIZED: Display Link",
-	"create.display_link.no_source": "UNLOCALIZED: Not a Display Source",
-	"create.display_link.no_target": "UNLOCALIZED: Not a Display Target",
-	"create.display_link.reading_from": "UNLOCALIZED: Read from:",
-	"create.display_link.writing_to": "UNLOCALIZED: Send to:",
-	"create.display_link.attached_side": "UNLOCALIZED: Block on attached side",
-	"create.display_link.targeted_location": "UNLOCALIZED: Block in targeted location",
-	"create.display_link.view_compatible": "UNLOCALIZED: Click to view all Compatible",
-	"create.display_link.information_type": "UNLOCALIZED: Type of Information",
+	"create.display_link.clear": "选择的位置已清除",
+	"create.display_link.too_far": "目标位置离此处太远",
+	"create.display_link.invalid": "链接器没有有效的目标，尝试重新放置它",
+	"create.display_link.title": "显示链接器",
+	"create.display_link.no_source": "不是显示来源",
+	"create.display_link.no_target": "不是显示目标",
+	"create.display_link.reading_from": "读取自：",
+	"create.display_link.writing_to": "发送到：",
+	"create.display_link.attached_side": "连接到的方块",
+	"create.display_link.targeted_location": "目标位置的方块",
+	"create.display_link.view_compatible": "点击查看所有兼容的",
+	"create.display_link.information_type": "信息类型",
 	"create.display_link.display_on": "写入数据到：",
-	"create.display_link.display_on_multiline": "UNLOCALIZED: Start writing at:",
+	"create.display_link.display_on_multiline": "从此处开始写入：",
 
-	"create.display_source.label": "UNLOCALIZED: Attached Label",
-	"create.display_source.combine_item_names": "UNLOCALIZED: Combine Item Names",
-	"create.display_source.count_items": "UNLOCALIZED: Amount of matching Items",
-	"create.display_source.list_items": "UNLOCALIZED: List matching Items",
-	"create.display_source.fluid_amount": "UNLOCALIZED: Amount of matching Fluids",
-	"create.display_source.list_fluids": "UNLOCALIZED: List matching Fluids",
-	"create.display_source.nixie_tube": "UNLOCALIZED: Copy Nixie Tubes",
-	"create.display_source.fill_level": "UNLOCALIZED: Container Fill Level",
+	"create.display_source.label": "附加标签",
+	"create.display_source.combine_item_names": "合并物品名称",
+	"create.display_source.count_items": "匹配的物品数量",
+	"create.display_source.list_items": "列出匹配的物品",
+	"create.display_source.fluid_amount": "匹配的流体储量",
+	"create.display_source.list_fluids": "列出匹配的流体",
+	"create.display_source.nixie_tube": "复制辉光管",
+	"create.display_source.fill_level": "容器存量",
 	"create.display_source.fill_level.display": "显示格式",
 	"create.display_source.fill_level.percent": "百分比",
 	"create.display_source.fill_level.progress_bar": "进度条",
-	"create.display_source.value_list.display": "UNLOCALIZED: Value Display",
-	"create.display_source.value_list.shortened": "UNLOCALIZED: Shortened",
-	"create.display_source.value_list.full_number": "UNLOCALIZED: Full Number",
+	"create.display_source.value_list.display": "数量显示",
+	"create.display_source.value_list.shortened": "近似值",
+	"create.display_source.value_list.full_number": "完整数值",
 	"create.display_source.value_list.thousand": "k",
 	"create.display_source.value_list.million": "m",
-	"create.display_source.player_deaths": "UNLOCALIZED: Player Deaths",
+	"create.display_source.player_deaths": "玩家死亡次数",
 	"create.display_source.scoreboard": "计分板",
-	"create.display_source.scoreboard.objective": "UNLOCALIZED: Objective ID",
-	"create.display_source.scoreboard.objective_not_found": "UNLOCALIZED: '%1$s' not found",
-	"create.display_source.scoreboard.objective.deaths": "UNLOCALIZED: Player Deaths",
+	"create.display_source.scoreboard.objective": "记分项ID",
+	"create.display_source.scoreboard.objective_not_found": "找不到'%1$s'",
+	"create.display_source.scoreboard.objective.deaths": "玩家死亡次数",
 	"create.display_source.time_of_day": "时间",
-	"create.display_source.stop_watch": "UNLOCALIZED: Stopwatch",
+	"create.display_source.stop_watch": "秒表",
 	"create.display_source.time.format": "时间格式",
 	"create.display_source.time.12_hour": "12小时制",
 	"create.display_source.time.24_hour": "24小时制",
-	"create.display_source.accumulate_items": "UNLOCALIZED: Accumulate Item Count",
-	"create.display_source.item_throughput": "UNLOCALIZED: Item Throughput",
-	"create.display_source.item_throughput.interval": "UNLOCALIZED: Interval",
-	"create.display_source.item_throughput.interval.second": "UNLOCALIZED: per Second",
-	"create.display_source.item_throughput.interval.minute": "UNLOCALIZED: per Minute",
-	"create.display_source.item_throughput.interval.hour": "UNLOCALIZED: per Hour",
-	"create.display_source.train_status": "UNLOCALIZED: Train Schedule Status",
-	"create.display_source.station_summary": "UNLOCALIZED: Train Station Summary",
-	"create.display_source.station_summary.filter": "UNLOCALIZED: Station name filter",
-	"create.display_source.station_summary.train_name_column": "UNLOCALIZED: Train column size",
-	"create.display_source.station_summary.platform_column": "UNLOCALIZED: Platform column size",
-	"create.display_source.station_summary.now": "UNLOCALIZED: now",
-	"create.display_source.station_summary.minutes": "UNLOCALIZED:  min",
-	"create.display_source.station_summary.seconds": "UNLOCALIZED: %1$ss",
-	"create.display_source.observed_train_name": "UNLOCALIZED: Detected Train Name",
-	"create.display_source.max_enchant_level": "UNLOCALIZED: Max Enchanting Cost",
-	"create.display_source.boiler_status": "UNLOCALIZED: Boiler Status",
-	"create.display_source.entity_name": "UNLOCALIZED: Entity Name",
-	"create.display_source.kinetic_speed": "UNLOCALIZED: Rotation Speed (RPM)",
-	"create.display_source.kinetic_speed.absolute": "UNLOCALIZED: Ignore Direction",
-	"create.display_source.kinetic_speed.directional": "UNLOCALIZED: Include Direction",
-	"create.display_source.kinetic_stress": "UNLOCALIZED: Network Stress",
-	"create.display_source.kinetic_stress.display": "UNLOCALIZED: Displayed Info",
-	"create.display_source.kinetic_stress.progress_bar": "UNLOCALIZED: Progress Bar",
-	"create.display_source.kinetic_stress.percent": "UNLOCALIZED: Percentage",
-	"create.display_source.kinetic_stress.current": "UNLOCALIZED: Stress in SU",
-	"create.display_source.kinetic_stress.max": "UNLOCALIZED: Total Capacity",
-	"create.display_source.kinetic_stress.remaining": "UNLOCALIZED: Remaining SU",
-	"create.display_source.redstone_power": "UNLOCALIZED: Redstone Power",
-	"create.display_source.redstone_power.display": "UNLOCALIZED: Display Format",
-	"create.display_source.redstone_power.number": "UNLOCALIZED: Number",
-	"create.display_source.redstone_power.progress_bar": "UNLOCALIZED: Progress Bar",
-	"create.display_source.boiler.not_enough_space": "UNLOCALIZED: Not enough space ",
-	"create.display_source.boiler.for_boiler_status": "UNLOCALIZED: for Boiler Status",
+	"create.display_source.accumulate_items": "累计物品数量",
+	"create.display_source.item_throughput": "物品吞吐量",
+	"create.display_source.item_throughput.interval": "间隔",
+	"create.display_source.item_throughput.interval.second": "每秒",
+	"create.display_source.item_throughput.interval.minute": "每分钟",
+	"create.display_source.item_throughput.interval.hour": "每小时",
+	"create.display_source.train_status": "列车行程状态",
+	"create.display_source.station_summary": "列车站状态总括",
+	"create.display_source.station_summary.filter": "站点名称过滤器",
+	"create.display_source.station_summary.train_name_column": "列车列数",
+	"create.display_source.station_summary.platform_column": "平台列数",
+	"create.display_source.station_summary.now": "现在",
+	"create.display_source.station_summary.minutes": "分钟",
+	"create.display_source.station_summary.seconds": "%1$s秒",
+	"create.display_source.observed_train_name": "测得的列车名称",
+	"create.display_source.max_enchant_level": "最大附魔花费",
+	"create.display_source.boiler_status": "锅炉状态",
+	"create.display_source.entity_name": "实体名称",
+	"create.display_source.kinetic_speed": "转速（RPM）",
+	"create.display_source.kinetic_speed.absolute": "无视转向",
+	"create.display_source.kinetic_speed.directional": "包含转向",
+	"create.display_source.kinetic_stress": "网络应力",
+	"create.display_source.kinetic_stress.display": "显示信息",
+	"create.display_source.kinetic_stress.progress_bar": "进度条",
+	"create.display_source.kinetic_stress.percent": "百分比",
+	"create.display_source.kinetic_stress.current": "应力（SU）",
+	"create.display_source.kinetic_stress.max": "总应力",
+	"create.display_source.kinetic_stress.remaining": "剩余应力",
+	"create.display_source.redstone_power":"红石信号",
+	"create.display_source.redstone_power.display": "显示格式",
+	"create.display_source.redstone_power.number": "数字",
+	"create.display_source.redstone_power.progress_bar": "进度条",
+	"create.display_source.boiler.not_enough_space": "没有足够空间",
+	"create.display_source.boiler.for_boiler_status": "来显示锅炉状态",
 
-	"create.display_target.line": "UNLOCALIZED: Line %1$s",
-	"create.display_target.page": "UNLOCALIZED: Page %1$s",
-	"create.display_target.single_line": "UNLOCALIZED: Single Line",
+	"create.display_target.line": "第%1$s行",
+	"create.display_target.page": "第%1$s页",
+	"create.display_target.single_line": "单行",
 
-	"create.flap_display.cycles.alphabet": "UNLOCALIZED:  ;A;B;C;D;E;F;G;H;I;J;K;L;M;N;O;P;Q;R;S;T;U;V;X;Y;Z",
-	"create.flap_display.cycles.numeric": "UNLOCALIZED:  ;0;1;2;3;4;5;6;7;8;9",
-	"create.flap_display.cycles.arrival_time": "UNLOCALIZED:    ; min;now;15s;30s;45s",
-	"create.flap_display.cycles.shortened_numbers": "UNLOCALIZED:  ;K;M",
-	"create.flap_display.cycles.fluid_units": "UNLOCALIZED: mB;B ",
-	"create.flap_display.cycles.instant": "UNLOCALIZED:  ; ",
-	"create.flap_display.cycles.pixel": "UNLOCALIZED: █;▓;▒",
+	"create.flap_display.cycles.alphabet": " ;A;B;C;D;E;F;G;H;I;J;K;L;M;N;O;P;Q;R;S;T;U;V;X;Y;Z",
+	"create.flap_display.cycles.numeric": " ;0;1;2;3;4;5;6;7;8;9",
+	"create.flap_display.cycles.arrival_time": "   ; min;now;15s;30s;45s",
+	"create.flap_display.cycles.shortened_numbers": " ;K;M",
+	"create.flap_display.cycles.fluid_units": "mB;B ",
+	"create.flap_display.cycles.instant": " ; ",
+	"create.flap_display.cycles.pixel": "█;▓;▒",
 
 	"create.super_glue.too_far": "选择范围过大",
 	"create.super_glue.cannot_reach": "选择的方块必须是相连的",
@@ -2008,12 +2008,12 @@
 	"item.create.copper_backtank.tooltip.condition2": "放下并接入动力时",
 	"item.create.copper_backtank.tooltip.behaviour2": "基于转速从周围环境中_收集_并_加压空气_",
 
-	"block.create.placard.tooltip": "UNLOCALIZED: PLACARD",
-	"block.create.placard.tooltip.summary": "UNLOCALIZED: _Frame_ your _items_ in brass using this fancy wall panel. Safe for contraptions!",
-	"block.create.placard.tooltip.condition1": "UNLOCALIZED: When R-Clicked with Item",
-	"block.create.placard.tooltip.behaviour1": "UNLOCALIZED: _Adds_ the held _item_ to the Placard. _Emits_ a brief _Redstone_ signal if a matching item was present already.",
-	"block.create.placard.tooltip.condition2": "UNLOCALIZED: When Punched",
-	"block.create.placard.tooltip.behaviour2": "UNLOCALIZED: _Removes_ the current _item_ in the frame.",
+	"block.create.placard.tooltip": "标语牌",
+	"block.create.placard.tooltip.summary": "用这个漂亮的墙板把你的物品用黄铜框起来，支持移动装置！",
+	"block.create.placard.tooltip.condition1": "手持物品右击时",
+	"block.create.placard.tooltip.behaviour1": "将手持的_物品__放入_标语牌，当内部已经有物品，且手持的物品与其匹配时，_发出_短暂的_红石_信号",
+	"block.create.placard.tooltip.condition2": "左击时",
+	"block.create.placard.tooltip.behaviour2": "_移除_内部的_物品_",
 
 	"block.create.flywheel.tooltip": "飞轮",
 	"block.create.flywheel.tooltip.summary": "用壮观的黄铜轮子_装饰_你的_机器_。",
@@ -2104,12 +2104,12 @@
 	"create.ponder.tag.contraption_actor.description": "能在移动的装置上执行特殊功能的组件",
 	"create.ponder.tag.creative": "创造模式",
 	"create.ponder.tag.creative.description": "总有些东西是生存模式得不到的",
-	"create.ponder.tag.display_sources": "UNLOCALIZED: Sources for Display Links",
-	"create.ponder.tag.display_sources.description": "UNLOCALIZED: Components or Blocks which offer some data that can be read with a Display Link",
+	"create.ponder.tag.display_sources": "显示链接器的数据来源",
+	"create.ponder.tag.display_sources.description": "可以提供一些数据被显示链接器读取的组件或方块",
 	"create.ponder.tag.logistics": "物品运输",
 	"create.ponder.tag.logistics.description": "该组件可以协助物品运输",
-	"create.ponder.tag.display_targets": "UNLOCALIZED: Targets for Display Links",
-	"create.ponder.tag.display_targets.description": "UNLOCALIZED: Components or Blocks which can process and display the data received from a Display Link",
+	"create.ponder.tag.display_targets": "显示链接器的输出目标",
+	"create.ponder.tag.display_targets.description": "可以处理和显示从显示链接器接收到的数据的组件或方块",
 	"create.ponder.tag.train_related": "铁路设备",
 	"create.ponder.tag.train_related.description": "用于建造或管理列车装置的组件",
 
@@ -2289,7 +2289,7 @@
 	"create.ponder.creative_motor.text_1": "创造马达是一种紧凑且可配置的旋转力源",
 	"create.ponder.creative_motor.text_2": "对其后面板滑动滚轮，可以改变马达的输出旋转转速",
 
-	"create.ponder.creative_motor_mojang.header": "UNLOCALIZED: Mojang's Enigma",
+	"create.ponder.creative_motor_mojang.header": "Mojang的神秘机械",
 
 	"create.ponder.crushing_wheels.header": "使用粉碎轮处理物品",
 	"create.ponder.crushing_wheels.text_1": "一对粉碎轮，磨物快又准",
