中文翻译：时刻表界面剩下的一点点文本
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -739,7 +739,7 @@
 	"advancement.create.drain": "滚筒排液",
 	"advancement.create.drain.desc": "目睹物品被分液池排空",
 	"advancement.create.steam_engine": "发电站",
-	"advancement.create.steam_engine.desc": "UNLOCALIZED: 用蒸汽引擎产生动力（原文是torque，扭矩？）",
+	"advancement.create.steam_engine.desc": "用蒸汽引擎产生动力",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
 	"advancement.create.backtank": "负重前行",
@@ -815,7 +815,7 @@
 	"advancement.create.fist_bump": "来碰个拳，哥们~",
 	"advancement.create.fist_bump.desc": "使两个机械手互相碰拳",
 	"advancement.create.crafter_lazy_000": "权宜之计",
-	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)（大幅度减慢动力合成器来延迟基本建设？）",
+	"advancement.create.crafter_lazy_000.desc": "大幅度减慢动力合成器来延迟基本建设",
 	"advancement.create.extendo_grip_dual": "点满升级",
 	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n（隐藏进度）",
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
@@ -837,7 +837,7 @@
 	"advancement.create.train_whistle": "呜！呜!",
 	"advancement.create.train_whistle.desc": "在你的火车上安装一个蒸汽笛并在驾驶时激活它",
 	"advancement.create.train_portal": "超维度列车",
-	"advancement.create.train_portal.desc": "成列车穿越下界传送门",
+	"advancement.create.train_portal.desc": "乘坐列车穿越下界传送门",
 	"advancement.create.track_crafting_factory": "轨道工厂",
 	"advancement.create.track_crafting_factory.desc": "用同一个动力辊压机制造1000个列车轨道",
 	"advancement.create.long_bend": "最长弯道",
@@ -1446,14 +1446,14 @@
 	"create.schedule.instruction.throttle.summary": "调整节流阀到%1$s",
 	"create.schedule.instruction.throttle_edit_box": "节流阀",
 	"create.schedule.instruction.throttle_edit_box_1": "影响列车的最高速度",
-	"create.schedule.condition_type": "如果……/之后……则继续：",
+	"create.schedule.condition_type": "如果满足/完成之后……则继续：",
 	"create.schedule.condition.editor": "条件编辑器",
 	"create.schedule.condition.delay": "调度延迟",
 	"create.schedule.condition.delay_short": "等待：%1$s",
-	"create.schedule.condition.delay.status": "UNLOCALIZED: Departs in %1$s",
-	"create.schedule.condition.idle": "UNLOCALIZED: Cargo Inactivity",
-	"create.schedule.condition.idle_short": "UNLOCALIZED: Cargo Idle: %1$s",
-	"create.schedule.condition.idle.status": "UNLOCALIZED: Cargo Idle for %1$s",
+	"create.schedule.condition.delay.status": "发自%1$s",
+	"create.schedule.condition.idle": "货物不活动",
+	"create.schedule.condition.idle_short": "货物空闲：%1$s",
+	"create.schedule.condition.idle.status": "货物空闲了%1$s",
 	"create.schedule.condition.for_x_time": "%1$s",
 	"create.schedule.condition.unloaded": "区块卸载",
 	"create.schedule.condition.unloaded.status": "等待区块被卸载",
@@ -1473,7 +1473,7 @@
 	"create.schedule.condition.time_of_day.rotation.every_0_45": "每0:45",
 	"create.schedule.condition.time_of_day.rotation.every_0_30": "每0:30",
 	"create.schedule.condition.time_of_day.rotation.every_0_15": "每0:15",
-	"create.schedule.condition.time_of_day.status": "UNLOCALIZED: Departs at ",
+	"create.schedule.condition.time_of_day.status": "出发于",
 	"create.schedule.condition.threshold.train_holds": "列车持有%1$s",
 	"create.schedule.condition.threshold.greater": "多于",
 	"create.schedule.condition.threshold.less": "少于",
