中文翻译：展示板、翻牌显示器、强力胶的思索内容、装卸状态，以及一些成就文本修正
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>
Co-authored-by: bucketBrian <bucketBrian@users.noreply.github.com>
Co-authored-by: YinXin24 <YinXin24@users.noreply.github.com>
Co-authored-by: Logic530 <sirui313@gmail.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -201,7 +201,7 @@
 	"block.create.deployer": "机械手",
 	"block.create.depot": "置物台",
 	"block.create.diorite_pillar": "闪长岩柱",
-	"block.create.display_board": "显示板",
+	"block.create.display_board": "翻牌显示器",
 	"block.create.display_link": "显示链接器",
 	"block.create.dripstone_pillar": "滴水石柱",
 	"block.create.encased_chain_drive": "链式传动箱",
@@ -332,7 +332,7 @@
 	"block.create.pink_toolbox": "粉红色工具箱",
 	"block.create.pink_valve_handle": "粉红色阀门手轮",
 	"block.create.piston_extension_pole": "活塞杆",
-	"block.create.placard": "标语牌",
+	"block.create.placard": "展示板",
 	"block.create.polished_cut_andesite": "磨制切制安山岩",
 	"block.create.polished_cut_andesite_slab": "磨制切制安山岩台阶",
 	"block.create.polished_cut_andesite_stairs": "磨制切制安山岩楼梯",
@@ -667,16 +667,16 @@
 	"_": "->------------------------]  Advancements  [------------------------<-",
 
 	"advancement.create.root": "欢迎来到机械动力",
-	"advancement.create.root.desc": "是时候来制作一些超赞的机械装置了！",
-	"advancement.create.andesite_alloy": "头韵狂魔（Alliterations Aplenty）",
-	"advancement.create.andesite_alloy.desc": "机械动力的材料名字都很古怪，安山合金（Andesite Alloy）就是其中之一",
+	"advancement.create.root.desc": "精巧发明在此",
+	"advancement.create.andesite_alloy": "安如顽石",
+	"advancement.create.andesite_alloy.desc": "获取机械动力的最重要资源——安山合金",
 	"advancement.create.andesite_casing": "安山时代",
 	"advancement.create.andesite_casing.desc": "使用安山合金和去皮原木来制造一个安山机壳",
 	"advancement.create.mechanical_press": "铿！",
 	"advancement.create.mechanical_press.desc": "使用动力辊压机压扁物品制成板材",
 	"advancement.create.encased_fan": "御风者",
 	"advancement.create.encased_fan.desc": "放置一个鼓风机并且让它开始工作",
-	"advancement.create.fan_processing": "粒子化加工",
+	"advancement.create.fan_processing": "粒子加工",
 	"advancement.create.fan_processing.desc": "使用鼓风机去加工材料",
 	"advancement.create.saw_processing": "车间中的危险机械",
 	"advancement.create.saw_processing.desc": "使用动力锯来加工材料",
@@ -686,8 +686,8 @@
 	"advancement.create.belt.desc": "用传送带连接两个传动杆",
 	"advancement.create.funnel": "机场美学",
 	"advancement.create.funnel.desc": "用漏斗从容器输出或输入物品",
-	"advancement.create.chute": "轰然倒塌",
-	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
+	"advancement.create.chute": "垂直物流",
+	"advancement.create.chute.desc": "用溜槽传输一些物品",
 	"advancement.create.mechanical_mixer": "混合搅拌",
 	"advancement.create.mechanical_mixer.desc": "用动力搅拌器混合材料",
 	"advancement.create.burner": "活炉",
@@ -695,11 +695,11 @@
 	"advancement.create.water_wheel": "掌控水流",
 	"advancement.create.water_wheel.desc": "放置一个水车并且让它开始旋转！",
 	"advancement.create.windmill": "微风吹拂",
-	"advancement.create.windmill.desc": "组装风车",
+	"advancement.create.windmill.desc": "组装风车并使其产生动力",
 	"advancement.create.shifting_gears": "换挡，加速，起飞！",
 	"advancement.create.shifting_gears.desc": "将大齿轮连接到小齿轮上，可以改变装置的转速",
-	"advancement.create.millstone": "便携式粉碎机",
-	"advancement.create.millstone.desc": "放置一个石磨并且为其供能",
+	"advancement.create.millstone": "怡人磨练",
+	"advancement.create.millstone.desc": "使用石磨将物品磨碎",
 	"advancement.create.super_glue": "衔接地带",
 	"advancement.create.super_glue.desc": "使用强力胶将多个方块连为一体",
 	"advancement.create.contraption_actors": "有目的地行动",
@@ -708,29 +708,29 @@
 	"advancement.create.portable_storage_interface.desc": "用移动式储存接口从移动装置中取出或输入物品",
 	"advancement.create.wrench_goggles": "一应俱全",
 	"advancement.create.wrench_goggles.desc": "同时装备工程师护目镜与扳手",
-	"advancement.create.stressometer": "精密的应力控制",
-	"advancement.create.stressometer.desc": "放置一个应力表，并且戴上工程师护目镜来读取应力数据",
+	"advancement.create.stressometer": "应力数是给呆子看的",
+	"advancement.create.stressometer.desc": "在应力表和工程师护目镜的辅助下获取准确读数",
 	"advancement.create.cuckoo_clock": "到点了吗？",
 	"advancement.create.cuckoo_clock.desc": "目睹你的布谷鸟闹钟提醒你睡觉",
 	"advancement.create.windmill_maxed": "强风肆虐",
-	"advancement.create.windmill_maxed.desc": "组装一个最高级的风车",
+	"advancement.create.windmill_maxed.desc": "组装最高强度的风车",
 	"advancement.create.ejector_maxed": "跳板冠军",
 	"advancement.create.ejector_maxed.desc": "被弹射置物台弹飞30格以外",
 	"advancement.create.pulley_maxed": "绳索遍地",
 	"advancement.create.pulley_maxed.desc": "使用绳索滑轮伸出超过200格长的绳索",
-	"advancement.create.cart_pickup": "大力士",
+	"advancement.create.cart_pickup": "铁腕儿",
 	"advancement.create.cart_pickup.desc": "捡起一个至少带有200个方块的矿车结构",
 	"advancement.create.anvil_plough": "锻匠大炮",
 	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
 	"advancement.create.lava_wheel_00000": "风火轮",
-	"advancement.create.lava_wheel_00000.desc": "这不应该能运行§7\n（隐藏进度）",
+	"advancement.create.lava_wheel_00000.desc": "这也能行？§7\n（隐藏进度）",
 	"advancement.create.hand_crank_000": "锻炼时间",
 	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n（隐藏进度）",
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
 	"advancement.create.belt_funnel_kiss.desc": "让两个安装在传送带上的漏斗深情相吻",
 	"advancement.create.stressometer_maxed": "完美消耗",
 	"advancement.create.stressometer_maxed.desc": "在应力表中得到100%的读数§7\n（隐藏进度）",
-	"advancement.create.copper": "更坚固的岩石",
+	"advancement.create.copper": "更坚固的顽石",
 	"advancement.create.copper.desc": "为你的流体操控技术积累一点铜",
 	"advancement.create.copper_casing": "铜器时代",
 	"advancement.create.copper_casing.desc": "使用铜和木头制作一个铜机壳",
@@ -795,7 +795,7 @@
 	"advancement.create.clockwork_bearing": "巧械时钟",
 	"advancement.create.clockwork_bearing.desc": "组装安装在发条轴承上的装置",
 	"advancement.create.display_link": "大数据",
-	"advancement.create.display_link.desc": "用显示板可视化资讯",
+	"advancement.create.display_link.desc": "用翻牌显示器可视化资讯",
 	"advancement.create.potato_cannon": "Fwoomp!",
 	"advancement.create.potato_cannon.desc": "用土豆加农炮击杀一个生物",
 	"advancement.create.extendo_grip": "biu biu biu!",
@@ -831,7 +831,7 @@
 	"advancement.create.track_signal": "交通控制",
 	"advancement.create.track_signal.desc": "放置一个列车信号机",
 	"advancement.create.display_board_0": "动态时间表",
-	"advancement.create.display_board_0.desc": "利用显示链接器，在显示板上预报列车入站时间",
+	"advancement.create.display_board_0.desc": "利用显示链接器，在翻牌显示器上预报列车入站时间",
 	"advancement.create.track_0": "新尺度",
 	"advancement.create.track_0.desc": "获得一些列车轨道",
 	"advancement.create.train_whistle": "呜！呜!",
@@ -1451,9 +1451,9 @@
 	"create.schedule.condition.delay": "调度延迟",
 	"create.schedule.condition.delay_short": "等待：%1$s",
 	"create.schedule.condition.delay.status": "发自%1$s",
-	"create.schedule.condition.idle": "货物不活动",
-	"create.schedule.condition.idle_short": "货物空闲：%1$s",
-	"create.schedule.condition.idle.status": "货物空闲了%1$s",
+	"create.schedule.condition.idle": "装卸停止",
+	"create.schedule.condition.idle_short": "装卸停止：%1$s",
+	"create.schedule.condition.idle.status": "装卸停止：%1$s",
 	"create.schedule.condition.for_x_time": "%1$s",
 	"create.schedule.condition.unloaded": "区块卸载",
 	"create.schedule.condition.unloaded.status": "等待区块被卸载",
@@ -2008,10 +2008,10 @@
 	"item.create.copper_backtank.tooltip.condition2": "放下并接入动力时",
 	"item.create.copper_backtank.tooltip.behaviour2": "基于转速从周围环境中_收集_并_加压空气_",
 
-	"block.create.placard.tooltip": "标语牌",
+	"block.create.placard.tooltip": "展示板",
 	"block.create.placard.tooltip.summary": "用这个漂亮的墙板把你的物品用黄铜框起来，支持移动装置！",
 	"block.create.placard.tooltip.condition1": "手持物品右击时",
-	"block.create.placard.tooltip.behaviour1": "将手持的_物品__放入_标语牌，当内部已经有物品，且手持的物品与其匹配时，_发出_短暂的_红石_信号",
+	"block.create.placard.tooltip.behaviour1": "将手持的_物品__放入_展示板，当内部已经有物品，且手持的物品与其匹配时，_发出_短暂的_红石_信号",
 	"block.create.placard.tooltip.condition2": "左击时",
 	"block.create.placard.tooltip.behaviour2": "_移除_内部的_物品_",
 
@@ -2105,7 +2105,7 @@
 	"create.ponder.tag.creative": "创造模式",
 	"create.ponder.tag.creative.description": "总有些东西是生存模式得不到的",
 	"create.ponder.tag.display_sources": "显示链接器的数据来源",
-	"create.ponder.tag.display_sources.description": "可以提供一些数据被显示链接器读取的组件或方块",
+	"create.ponder.tag.display_sources.description": "可以提供一些可被显示链接器读取的数据的组件或方块",
 	"create.ponder.tag.logistics": "物品运输",
 	"create.ponder.tag.logistics.description": "该组件可以协助物品运输",
 	"create.ponder.tag.display_targets": "显示链接器的输出目标",
@@ -2340,8 +2340,8 @@
 	"create.ponder.depot.text_3": "与传送带一样，它也可以将其内的物品转送到其他设备中进行加工……",
 	"create.ponder.depot.text_4": "……同时物品也可以被机械手存取",
 
-	"create.ponder.display_board.header": "使用显示板",
-	"create.ponder.display_board.text_1": "显示板是告示牌的可扩展替代品",
+	"create.ponder.display_board.header": "使用翻牌显示器",
+	"create.ponder.display_board.text_1": "翻牌显示器是告示牌的可扩展替代品",
 	"create.ponder.display_board.text_2": "它们需要动力以运作",
 	"create.ponder.display_board.text_3": "可以对其使用命名牌来显示文字……",
 	"create.ponder.display_board.text_4": "……或通过使用显示链接器",
@@ -2873,11 +2873,11 @@
 	"create.ponder.stressometer.text_3": "红石比较器可以根据应力表的数值输出不同强弱的红石信号",
 
 	"create.ponder.super_glue.header": "使用强力胶来黏附方块",
-	"create.ponder.super_glue.text_1": "强力胶可以在任意两个方块间使用",
-	"create.ponder.super_glue.text_2": "当被粘合的方块被组装为装置时，他们会一起运动",
-	"create.ponder.super_glue.text_3": "当强力胶在副手时……",
-	"create.ponder.super_glue.text_4": "……新放置的方块会自动被黏附在所放置方块的面上",
-	"create.ponder.super_glue.text_5": "左击可以清除强力胶",
+	"create.ponder.super_glue.text_1": "强力胶用于将方块组合成移动装置",
+	"create.ponder.super_glue.text_2": "右键点击两个端点来创建一个新的“胶合”区域",
+	"create.ponder.super_glue.text_3": "手持强力胶左键点击可以移除选区",
+	"create.ponder.super_glue.text_4": "同一个选区内的方块会一起移动",
+	"create.ponder.super_glue.text_5": "互相重叠的选区会一起移动",
 	"create.ponder.super_glue.text_6": "悬挂在其它方块上的方块通常不需要强力胶",
 
 	"create.ponder.track_chunks.header": "横穿卸载的区块",
